--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -6,12 +6,11 @@ on: [push, workflow_dispatch]
 
 env:
   RESOURCE-GROUP: rg-az400-eshoponweb-tanure
-  LOCATION: eastus
+  LOCATION: Brazil South
   TEMPLATE-FILE: .azure/bicep/webapp.bicep
   SUBSCRIPTION-ID: 15afba79-20ff-4019-9581-a7a63430d79d
   WEBAPP-NAME: az400-webapp-tanure
-
-
+  
 jobs:
   #Build, test and publish .net web project in repository
   buildandtest:
