--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -6,7 +6,7 @@ on: [push, workflow_dispatch]
 
 env:
   RESOURCE-GROUP: rg-az400-eshoponweb-tanure
-  LOCATION: Brazil South
+  LOCATION: eastus
   TEMPLATE-FILE: .azure/bicep/webapp.bicep
   SUBSCRIPTION-ID: 15afba79-20ff-4019-9581-a7a63430d79d
   WEBAPP-NAME: az400-webapp-tanure
